# RectanglesPacking

./: CMakeLists.txt  MaxRectsBin.cpp  README.md  mainMaxBinPack.cpp  maxRectsBinPackmain.cpp
Documentation/: AlgorithmDescription.docx  AlgorithmDescription.pages  CodeDescription.docx  CodeDescription.pages
Files/: 20_rectangles.txt  RectangleTest1.txt  RectangleTest2.txt  RectangleTest3.txt  VerySimpleTest.txt
RectanglesLoader/: CMakeLists.txt
RectanglesLoader/src/: BinPackHelper.cpp  BinPackHelper.h  IPrint.h  MaxRectsBinPack.cpp  MaxRectsBinPack.h  Rect.cpp  Rect.h  RectLoader.cpp  RectLoader.h  RectanglesList.cpp  RectanglesList.h  TerminalPrint.cpp  TerminalPrint.h
RectanglesLoader/src/RectangleBinPack/: MaxRectsBinPack.cpp  MaxRectsBinPack.h
RectanglesLoaderTests/: CMakeLists.txt  RectLoaderTest.cpp  RectTest.cpp  RectanglesListTest.cpp  TerminalPrintTest.cpp
RectanglesLoaderTests/lib/googletest/: CMakeLists.txt
RectanglesPack/: CMakeLists.txt
RectanglesPack/src/: BinPackHelper.cpp  RectLoader.h  RectanglesList.h
RectanglesPack/src/RectangleBinPack/: MaxRectsBinPack.cpp
RectanglesPack/src/print/: IPrint.h  TerminalPrint.cpp  TerminalPrint.h
RectanglesPackUnitTests/: CMakeLists.txt  RectTest.cpp  RectanglesListTest.cpp  basic_check.cpp
RectanglesPackUnitTests/lib/: CMakeLists.txt
RectanglesPackUnitTests/lib/googlemock/: CMakeLists.txt
RectanglesPackUnitTests/lib/googlemock/test/: gmock_test_utils.py
